--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
     <title>Presentación Modo Oscuro</title>
 </head>
 <body>
